# smartcook

./: README.md.txt
cmake/: FindThrift.cmake
crawler/: download_pages.py  get_recipes_links.py
crawler/parser/: parser.py
indexer/: CMakeLists.txt  main.cpp
search/: CMakeLists.txt  content_system.cpp  content_system.h  document.cpp  document.h  index.cpp  index.h  main.cpp  query.cpp  query.h  search.cpp
search/if/: CMakeLists.txt  search.thrift
search/if/gen-cpp/: Search.cpp  Search.h  Search_server.skeleton.cpp  search_constants.cpp  search_constants.h  search_types.cpp  search_types.h
search/if/gen-js/: Search.js  search_types.js
search/proto/: recipe.proto
suggest/: suggest.cpp  suggest.h
