CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(SMARTCOOK)

FIND_PACKAGE(Protobuf REQUIRED)
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS proto/recipe.proto)

ADD_EXECUTABLE(
    smartcook

    content_system.cpp
    document.cpp
    index.cpp
    query.cpp

    ${PROTO_SRCS}
    ${PROTO_HDRS}

    main.cpp)

TARGET_LINK_LIBRARIES(smartcook ${PROTOBUF_LIBRARIES})
