CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(search)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/../cmake/")

INCLUDE_DIRECTORIES("./if/gen-cpp")

INCLUDE_DIRECTORIES(${clucene_SOURCE_DIR}/src/core)

FIND_PACKAGE(Boost COMPONENTS program_options REQUIRED)
MESSAGE(STATUS "** Boost Include: ${Boost_INCLUDE_DIR}")
MESSAGE(STATUS "** Boost Lib: ${Boost_LIBRARIES}")
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
ADD_DEFINITIONS("-DHAS_BOOST")

FIND_PACKAGE(Thrift REQUIRED)
MESSAGE("${Thrift_LIB}")

ADD_EXECUTABLE(search search.cpp ./if/gen-cpp/Search.cpp ./if/gen-cpp/search_types.cpp)

TARGET_LINK_LIBRARIES(search clucene-core ${Thrift_LIB} ${Boost_PROGRAM_OPTIONS_LIBRARY})

